Created a Sustainability website

--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <html>
   <head>
-    <title></title>
+    <title>Sustainability</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1></h1>
+    <h1>Sustainability: Let's Save the Earth</h1>
+    <h2>Climate change and global warming have reached unprecented levels. The Earth is approaching a point of no-return and it's time to take action.</h2>
+     <p>There are several avenues we can take. For example, renewable energy sources. 
+       <img src='https://images.unsplash.com/photo-1554769945-af468c934022?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80' alt="">
+       <img src="https://images.unsplash.com/photo-1558449028-b53a39d100fc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" alt="">
+       <img src="https://images.unsplash.com/photo-1563951218203-70e139b56e47?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1502&q=80" alt="">
+       <br>
+       <br>
+     </br>     
+       Recycling and proper trash collection and disposal.
+       <br>
+       <br>
+    </br>
+
+
+       <img src="https://images.unsplash.com/photo-1539692267500-f384fb119654?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1422&q=80" alt="">
+       <img src="https://images.unsplash.com/photo-1517319725296-466c84bd7d54?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="">
+
+    </p>
+
   </body>
 </html>
